--- a/css/intro.css
+++ b/css/intro.css
@@ -21,6 +21,7 @@
 .glass{
     background-color: rgba(0,0,0,0.3);
     padding: 1em;
+    text-align: center;
 }
 
 li a{
