--- a/css/projects.css
+++ b/css/projects.css
@@ -44,23 +44,20 @@
     display: table-cell;
     height: 25%;
     width: 25%;
-    padding: 1em 1em 0 0;
+    padding: 0 1em 1em 0;
 }
 
 .project-img-wrapper{
-    display: inline-block;
+    display: block;
     overflow: hidden;
-    width: 250px;
-    height: 250px;
 }
 
 .project-img{
-    position: relative;
+    display: block;
     width: 100%;
     height: 100%;
     transition: all .5s ease;
     vertical-align: middle;
-    object-fit: cover;
 }
 
 .project-img:hover {
